# pd-scanner-152fz-v2

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: routes_history.py  routes_scan.py
backend/app/core/: config.py  logging.py
backend/app/models/: db.py  schemas.py
backend/app/services/: classifier_service.py  consent_detection_service.py  crawler_service.py  document_extraction_service.py  dom_parser.py  fz152_assessment_service.py  integration_audit_service.py  interactive_discovery_service.py  link_discovery_service.py  network_capture.py  page_classifier_service.py  policy_parser_service.py  (+9 more)
backend/tests/: test_api.py  test_classifier.py  test_document_extraction.py  test_fz152_assessment.py  test_integration_audit.py  test_page_classifier.py  test_policy_parser.py  test_scan_diff.py  test_synthetic_submission.py  test_vendor_classification.py
docs/: 152FZ_CHECKLIST.md  API_OVERVIEW.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DATA_FLOW.md  DEVELOPER_GUIDE.md  EVIDENCE_MODEL.md  EXTENDING_SCANNER.md  INTERVIEW_NOTES.md  LIMITATIONS.md  PRD.md  PRIVACY_AUDIT_MAPPING.md  QUALITY_ASSURANCE.md  RISK_SCORING.md  THREAT_MODEL.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
labs/enterprise_demo_site/: .env.example  Makefile  README.md  requirements.txt
sample_reports/: README.md  example_report.md  example_result.json
(+62 files in other folders)
